# Agente-conversacional

./: .gitignore  LICENSE  langgraph.json  pyproject.toml
AgentProject/: main.py  test_integre.py
AgentProject/configuration/app_configuration/: app_configuration.py
AgentProject/configuration/mcp_configuration/: mcp_configuration.json
AgentProject/configuration/personalities_configuration/: personalities.yml
AgentProject/core/apparence/: apparence_console.py
AgentProject/core/audio_orchestrator/: stt.py  stt_manager.py  stt_streaming.py  tts.py  tts_manager.py
AgentProject/core/humanizer/: emotion_analisys.py  personality.py  personality_manager.py  sentiment.py
AgentProject/core/llm_inference/: message_prompt.py  text_generation.py
AgentProject/core/llm_tg_inference/: text_generation.py
AgentProject/core/memory/: memorie_context.py
AgentProject/core/orchestrator/: agent_loop.py  prompt_manager.py  router.py
AgentProject/core/rag/: rag.py
AgentProject/mcp_client/: client_manager.py
AgentProject/mcp_servers/filesystem/: filesystem.py
AgentProject/mcp_servers/word_editor/: word_editor.py
AgentProject/mcp_servers/word_editor/utils_word/: word_utils.py
Agents/: conversational_agent.py
